--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container-down">
           <p>
             Oi! Tudo bom? Me chamo Matheus, sou do Rio de Janeiro e tenho 23
-            anos. Cursei tres anos de Letras português-japonês na UFRJ mas venho
+            anos. Cursei três anos de Letras português-japonês na UFRJ mas venho
             me descobrindo na área de programação. Cada desafio e trabalho me dá
             mais vontade de aprender mais. Faz cerca de dois meses que comecei a
             estudar e fico super animado para fazer aprender um conceito novo.
